<resources>
    <string name="app_name">ProgressCountDownTimer</string>
    <string name="settings">Settings</string>
    <string name="mute">Mute</string>
    <string name="tempo_amp_counting"><![CDATA[Tempo & Counting]]></string>
    <string name="follow_counting_to_control_tempo_and_complete_workout_in_a_limited_time">Follow counting to control tempo and complete workout in a limited time</string>
    <string name="counting">Counting</string>
    <string name="no_counting">No Counting</string>
    <string name="voice_guice">Voice Guice</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="picker_today">Today</string>
    <string name="picker_height_cm">Cm</string>
    <string name="picker_height_ft">FT</string>
    <string name="picker_weight_kg">Kg</string>
    <string name="picker_weight_lbs">LBS</string>
    <string name="profile">Profile</string>
    <string name="next_upcase">NEXT</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="con">CONTINUE</string>
    <string name="quit">QUIT</string>
    <string name="just_keep_going">You’ve gotten this far, just keep going</string>
    <string name="never_give">Never give up!</string>
    <string name="too_hard">Too Hard</string>
    <string name="so_easy">So Easy</string>
    <string name="know_how_to_do_it">Don’t Know How To Do It</string>
    <string name="i_like_it">I Like It, I’ll Back Later</string>
    <string name="others">Others</string>
    <string name="other_feedback">Other feedback?</string>
    <string name="let_us_know">Let us know</string>
    <string name="previous">Go to previous</string>
    <string name="go_to_next">Go to next</string>
    <string name="calendar">Calendar</string>
</resources>